# ChangeLog for app-crypt/johntheripper
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/johntheripper/ChangeLog,v 1.89 2009/03/03 13:54:27 pva Exp $

  03 Mar 2009; Peter Volkov <pva@gentoo.org> johntheripper-1.7.3.1.ebuild:
  ~mips keyword back, bug #227631.

  28 Feb 2009; Markus Meier <maekke@gentoo.org> metadata.xml:
  custom-cflags is a global USE-flag

*johntheripper-1.7.3.1 (04 Nov 2008)

  04 Nov 2008; Daniel Black <dragonheart@gentoo.org>
  +files/johntheripper-1.7.3.1-mkdir-sandbox.patch,
  +files/johntheripper-1.7.3.1-params.h.patch,
  +files/johntheripper-1.7.3.1-stackdef.S.patch,
  johntheripper-1.7.2-r3.ebuild, johntheripper-1.7.2-r4.ebuild,
  johntheripper-1.7.2-r5.ebuild, +johntheripper-1.7.3.1.ebuild:
  version bump thanks to Erwin Paternotte, Aoz, Anton Bolshakov as per bug
  #228013. SRC_URIs fixed for other ebuilds

  24 Jul 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  16 Jun 2008; Jeroen Roovers <jer@gentoo.org>
  johntheripper-1.7.2-r5.ebuild:
  Marked ~hppa again (bug #227631).

*johntheripper-1.7.2-r5 (16 Jun 2008)

  16 Jun 2008; Robin H. Johnson <robbat2@gentoo.org>
  +johntheripper-1.7.2-r5.ebuild:
  Re-add the MPI support. Tested with OpenMPI+Torque running 8 instances
  between a ppc (G5) and an amd64 box. ~hppa and ~mips dropped per bug #227631.

  13 Feb 2008; Alon Bar-Lev <alonbl@gentoo.org> -johntheripper-1.7.2.ebuild:
  Cleanup

*johntheripper-1.7.2-r4 (11 Jan 2008)

  11 Jan 2008; Alon Bar-Lev <alonbl@gentoo.org>
  +johntheripper-1.7.2-r4.ebuild:
  Cleanups, bug#202306, thanks to Alex Barker

  06 Jan 2008; Alon Bar-Lev <alonbl@gentoo.org>
  -johntheripper-1.7.2-r2.ebuild:
  Cleanup

  04 Jan 2008; Richard Freeman <rich0@gentoo.org>
  johntheripper-1.7.2-r3.ebuild:
  amd64 stable - bug 202306

  02 Jan 2008; Jeroen Roovers <jer@gentoo.org>
  johntheripper-1.7.2-r3.ebuild:
  Stable for HPPA (bug #202306).
