@@ -17,6 +17,6 @@ DIST john-1.7.3.1.tar.gz 814903 RMD160 c810466241889f307c0e7096bcdd4fb39d8638ca 
 EBUILD johntheripper-1.7.2-r3.ebuild 3634 RMD160 667a642a1bd88caa57605c8e7f1d1bbb1a8e3ad5 SHA1 c2e407c7dff90b49f9b35feb1667b14e969015d3 SHA256 039fd68a20c4d38ef5700bb729d90f0d5326e12854f6bb4a170dfdd32b7bf0f2
 EBUILD johntheripper-1.7.2-r4.ebuild 3344 RMD160 359b3145cdb1f552363b4ed737973675d87d7075 SHA1 a615e2cda91bbb155621c9f37b67338ed815d314 SHA256 086658c409870a91edc0c08d0fae4d034ea460060169e94c4146c516df5d0902
 EBUILD johntheripper-1.7.2-r5.ebuild 3618 RMD160 2cf4c84dd4c5e843bc7ac2450574cd21802db398 SHA1 ae90e0632b2926c471a4882ff27241f73119a016 SHA256 9bebcad99be10695bbbf241511a354fac677367abe99d5acca62a79269fede80
-EBUILD johntheripper-1.7.3.1.ebuild 4306 RMD160 2791a1e272d964cbf58ad6e4f54709e22a0a78fe SHA1 eaf29b016948327c14410c362ba1ec038c8b4bc7 SHA256 2ea0c5ff37a5e6d82b8c86471922ae8d7f7c85f88e78c6de2b6bba160ea65149
-MISC ChangeLog 15170 RMD160 1cbb348c362fed205cf0c4afe180a64509638274 SHA1 e5760babe481cc16787827c330fb9035d6913848 SHA256 995ea17445777512293a9046f47cea17e46411b8779b526ede5992b6f5c60f24
+EBUILD johntheripper-1.7.3.1.ebuild 4360 RMD160 1b4a6e9efa96babf2db5dac1031ca323781f3ca4 SHA1 a1f3752472c3b39c182e7725fc4a5711188aa7b6 SHA256 2f28b32a58499953f02e7e6c99b42176312811e07fe332effe1c55e7883df7db
+MISC ChangeLog 15320 RMD160 e921ec4986c6864a40c1be100a70776d2f47baef SHA1 460a2c16d4c0bd3ea50ec482a298171246674625 SHA256 c55e65421c4464628e29f4ca5b64e0713b7e8ef8eca9351d8a2552d74539b0ed
 MISC metadata.xml 160 RMD160 61ea9f9370afee3db802f40f7c6b2edd2f5347cf SHA1 51cf29a3589cff823294704e225b0de18f65e6dd SHA256 7419f4e73ddd07284403525f1380824fc68280cad69e2dfae0645ad52b33ef10
